# advent-of-code

./: .gitignore  Cargo.toml  README.md  justfile  readme.md
.github/workflows/: rust.yml
aoc_2024/: Cargo.toml
aoc_2024/src/: lib.rs
aoc_2024/src/day_1/: aoc.md  mod.rs
aoc_2024/src/day_1/data/: aoc.md
aoc_2024/src/day_10/: aoc.md  mod.rs
aoc_2024/src/day_11/: aoc.md  mod.rs
aoc_2024/src/day_11/data/: aoc.md
aoc_2024/src/day_12/: aoc.md  mod.rs
aoc_2024/src/day_12/data/: aoc.md
aoc_2024/src/day_13/: aoc.md  mod.rs
aoc_2024/src/day_14/: aoc.md  math.rs  mod.rs
aoc_2024/src/day_15/: aoc.md
aoc_2024/src/day_2/: aoc.md  mod.rs
aoc_2024/src/day_3/: aoc.md  mod.rs
aoc_2024/src/day_4/: aoc.md  mod.rs
aoc_2024/src/day_5/: aoc.md  mod.rs
aoc_2024/src/day_6/: aoc.md  mod.rs
aoc_2024/src/day_7/: aoc.md  mod.rs
aoc_2024/src/day_8/: aoc.md  mod.rs
aoc_2024/src/day_9/: aoc.md  mod.rs
aoc_2025/: Cargo.toml
aoc_2025/src/: lib.rs
aoc_2025/src/day_1/: aoc.md  mod.rs
aoc_2025/src/day_10/: aoc.md  mod.rs
aoc_2025/src/day_11/: aoc.md  mod.rs
aoc_2025/src/day_2/: aoc.md  mod.rs
aoc_2025/src/day_3/: aoc.md  mod.rs
aoc_2025/src/day_4/: aoc.md  mod.rs
aoc_2025/src/day_5/: aoc.md  mod.rs
aoc_2025/src/day_6/: aoc.md  mod.rs
aoc_2025/src/day_7/: aoc.md  mod.rs
aoc_2025/src/day_8/: aoc.md  mod.rs
aoc_2025/src/day_9/: aoc.md  mod.rs
aoc_utils/: Cargo.toml
aoc_utils/src/: challenge_day.rs  day.rs  main.rs
aoc_utils/templates/: rust.tmpl
benches/: Cargo.toml
benches/benches/: bench.rs
benches/src/: main.rs  read.rs  readme.tmpl  write.rs
common/: Cargo.toml
common/src/: direction.rs  grid.rs  lib.rs  macros.rs  point.rs
common/src/helpers/: direction.rs  grid.rs  mod.rs  point.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/day-1/: Cargo.toml
crates/day-1/src/: main.rs
crates/day-10/: Cargo.toml
crates/day-10/src/: main.rs
crates/day-11/: Cargo.toml
crates/day-11/src/: main.rs
crates/day-12/: Cargo.toml
crates/day-12/src/: main.rs
crates/day-13/: Cargo.toml
crates/day-13/src/: main.rs
crates/day-14/: Cargo.toml
crates/day-14/src/: main.rs
crates/day-2/: Cargo.toml
crates/day-2/src/: main.rs
crates/day-3/: Cargo.toml
crates/day-3/src/: main.rs
crates/day-4/: Cargo.toml
crates/day-4/src/: common.rs  main.rs  part_1.rs  part_2.rs
crates/day-5/: Cargo.toml
crates/day-5/src/: main.rs
crates/day-6/: Cargo.toml
crates/day-6/src/: main.rs
crates/day-7/: Cargo.toml
crates/day-7/src/: main.rs
crates/day-8/: Cargo.toml
crates/day-8/src/: main.rs
crates/day-9/: Cargo.toml
crates/day-9/src/: main.rs
(+11 files in other folders)
