[package]
name = "aoc_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
regex.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
rookie = "0.5"
jiff = "0.1"
html2md = "0.2"
