[package]
name = "aoc_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
rookie = { workspace = true }
jiff = { workspace = true }
html2md = { workspace = true }
