[package]
name = "advent-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
regex.workspace = true

criterion = "0.5"
paste = "1.0"
serde = "1.0"
serde_json = "1.0.134"
glob = "0.3.1"
scan_fmt = "0.2.6"
csv = "1.3"
itertools = "0.14"

aoc_2024 = { path = "../aoc_2024" }

[[bench]]
name = "bench"
harness = false
