[package]
name = "advent-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }
scan_fmt = { workspace = true }
csv = { workspace = true }
itertools = { workspace = true }

aoc_2024 = { workspace = true }
aoc_2025 = { workspace = true }

[dev-dependencies]
criterion = "0.8"
paste = { workspace = true }

[[bench]]
name = "bench"
harness = false
